--- a/src/app/layout/goal/goal.component.html
+++ b/src/app/layout/goal/goal.component.html
@@ -1,1 +1,245 @@
-<p>goal works!</p>
+<p-toast/>
+<p-confirmDialog/>
+<spinner [show]="spinner"></spinner>
+<div class="surface-card p-3 border-none border-round-xl shadow-3">
+    <p-table
+        #goalTable
+        [value]="goalList"
+        [paginator]="true"
+        [scrollable]="true"
+        [rows]="10">
+        <ng-template pTemplate="caption">
+            <div class="p-mt-4 flex justify-content-between gap-2">
+                <p-button
+                    severity="help"
+                    icon="pi pi-external-link"
+                    label="Exportar"
+                    (onClick)="exportCSV()"/>
+                <div class="text-4xl">Metas</div>
+                <div class="p-2 flex gap-2">
+                    <button pButton icon="pi pi-plus" class="p-button-success p-mr-2"
+                            (click)="goalDialog = true"></button>
+                </div>
+            </div>
+        </ng-template>
+        <ng-template pTemplate="header">
+            <tr>
+                <th pSortableColumn="seller" class="font-semibold">
+                    Vendedor
+                    <p-sortIcon field="seller"/>
+                </th>
+                <th pSortableColumn="goal" class="font-semibold">
+                    Meta (R$)
+                    <p-sortIcon field="goal"/>
+                </th>
+                <th pSortableColumn="startDate" class="font-semibold">
+                    Início
+                    <p-sortIcon field="startDate"/>
+                </th>
+                <th pSortableColumn="endDate" class="font-semibold">
+                    Fim
+                    <p-sortIcon field="endDate"/>
+                </th>
+                <th pSortableColumn="createdDate" class="font-semibold">
+                    Criado em
+                    <p-sortIcon field="createdDate"/>
+                </th>
+                <th pSortableColumn="createdBy" class="font-semibold">
+                    Criado por
+                    <p-sortIcon field="createdBy"/>
+                </th>
+                <th class="font-semibold text-center">
+                    Ações
+                </th>
+            </tr>
+            <tr>
+                <th>
+                    <p-columnFilter field="seller" matchMode="in" [showMenu]="false">
+                        <ng-template pTemplate="filter" let-value let-filter="filterCallback">
+                            <p-multiSelect
+                                [ngModel]="value"
+                                [options]="sellersString"
+                                placeholder="Selecione um ou mais"
+                                appendTo="body"
+                                (onChange)="filter($event.value)">
+                                <ng-template let-option pTemplate="item">
+                                    <div class="inline-block vertical-align-middle">
+                                        <span class="ml-1 mt-1">{{ option }}</span>
+                                    </div>
+                                </ng-template>
+                            </p-multiSelect>
+                        </ng-template>
+                    </p-columnFilter>
+                </th>
+                <th>
+                    <p-columnFilter
+                        type="numeric"
+                        field="goal"
+                        placeholder="Valor (R$)"/>
+                </th>
+                <th>
+                    <p-columnFilter
+                        type="date"
+                        field="startDate"
+                        placeholder="Início">
+                    </p-columnFilter>
+                </th>
+                <th>
+                    <p-columnFilter
+                        type="date"
+                        field="endDate"
+                        placeholder="Fim">
+                    </p-columnFilter>
+                </th>
+                <th>
+                    <p-columnFilter
+                        type="date"
+                        field="createdDate"
+                        placeholder="Criado em">
+                    </p-columnFilter>
+                </th>
+                <th>
+                    <p-columnFilter
+                        type="text"
+                        field="createdBy"
+                        placeholder="Criado por">
+                    </p-columnFilter>
+                </th>
+                <th></th>
+            </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-goal>
+            <tr>
+                <td>{{ goal.seller }}</td>
+                <td>{{ goal.goal | currency:'BRL':'symbol':'1.2-2' }}</td>
+                <td>{{ goal.startDate | date:'dd/MM/yyyy' }}</td>
+                <td>{{ goal.endDate | date:'dd/MM/yyyy' }}</td>
+                <td>{{ goal.createdDate | date:'dd/MM/yyyy - HH:mm:ss' }}</td>
+                <td class="text-center">
+                    <p-tag
+                        severity="warning"
+                        value="{{ goal.createdBy }}"/>
+                </td>
+                <td class="text-center">
+                    <div class="flex gap-1 justify-content-center">
+                        <button (click)="selectGoal(goal)" class="p-button-info" pButton
+                                icon="pi pi-eye">
+                        </button>
+                        <button (click)="confirmDeleteGoal(goal)" class="p-button-danger" pButton
+                                icon="pi pi-trash">
+                        </button>
+                    </div>
+                </td>
+            </tr>
+        </ng-template>
+    </p-table>
+</div>
+
+<form #goalForm="ngForm" name="goalForm">
+    <p-dialog [header]="editing ? 'Meta' : 'Nova Meta'"
+              [(visible)]="goalDialog"
+              [modal]="true"
+              [style]="{width: '40vw'}"
+              [breakpoints]="{ '1379px': '75vw', '767px': '90vw' }"
+              [maximizable]="true"
+              [draggable]="false"
+              (onHide)="refresh()">
+        <div class="grid p-fluid p-2">
+            <div class="col-12">
+                <div class="p-field">
+                    <label for="goal">Meta</label>
+                    <p-inputNumber
+                        name="goal"
+                        id="goal"
+                        [(ngModel)]="selectedGoal.goal"
+                        required
+                        [readonly]="selectedGoal.id > 0"
+                        [mode]="'currency'"
+                        [currency]="'BRL'"
+                        placeholder="Digite o valor da meta"
+                        #goal="ngModel"
+                        [ngClass]="{'ng-invalid': goal.invalid && goal.touched}">
+                    </p-inputNumber>
+                    <p-messages severity="error" class="text-red-300 ml-2" *ngIf="goal.invalid && goal.touched"
+                                [textContent]="'Meta é obrigatória'"></p-messages>
+                </div>
+            </div>
+
+            <div class="col-12">
+                <div class="p-field">
+                    <label for="sellerId">Vendedor</label>
+                    <input pInputText
+                           *ngIf="editing"
+                           [value]="selectedGoal.seller"
+                           readonly
+                    />
+                    <p-dropdown
+                        name="sellerId"
+                        id="sellerId"
+                        appendTo="body"
+                        *ngIf="!editing"
+                        [options]="sellers"
+                        (onChange)="selectedGoal.sellerId = $event.value.id"
+                        optionLabel="username"
+                        placeholder="Selecione um vendedor"
+                        required>
+                    </p-dropdown>
+                </div>
+            </div>
+
+            <div class="col-12">
+                <div class="p-field">
+                    <label for="dateRange">Período</label>
+                    <input pInputText
+                           *ngIf="editing"
+                           [value]="(selectedGoal.startDate | date: 'dd/MM/yyyy') + ' - ' + (selectedGoal.endDate | date: 'dd/MM/yyyy')"
+                           readonly
+                    />
+                    @if (!editing) {
+                        <p-calendar
+                            name="dateRange"
+                            id="dateRange"
+                            appendTo="body"
+                            [(ngModel)]="goalDateRange"
+                            [selectionMode]="'range'"
+                            [showIcon]="true"
+                            [baseZIndex]="1000"
+                            dateFormat="dd/mm/yy"
+                            placeholder="Selecione o período"
+                            required
+                            #dateRange="ngModel"
+                            [ngClass]="{'ng-invalid': dateRange.invalid && dateRange.touched}">
+                        </p-calendar>
+                        <p-messages severity="error" class="text-red-300 ml-2"
+                                    *ngIf="dateRange.invalid && dateRange.touched"
+                                    [textContent]="'Período é obrigatório'"></p-messages>
+                    }
+                </div>
+            </div>
+            <div class="col-12" *ngIf="editing">
+                <div class="flex flex-column align-items-center justify-content-center">
+                    <p-chart *ngIf="selectedGoal.currentProgress > 0" type="doughnut" [data]="goalChartData" [options]="goalChartOptions" style="width: 100%; height: 100%"></p-chart>
+                    <div class="mt-4 text-center">
+                        <p class="text-lg font-semibold text-gray-800">
+                            Meta: {{ selectedGoal.goal | currency:'BRL':'symbol':'1.2-2' }}
+                        </p>
+                        <p class="text-md text-gray-500">
+                            Concluído: {{ selectedGoal.currentProgress | currency:'BRL':'symbol':'1.2-2' }}
+                        </p>
+                        <p class="text-sm text-gray-600">
+                            Progresso: {{ (selectedGoal.currentProgress / selectedGoal.goal * 100).toFixed(2) }}%
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <p-footer>
+            <button pButton label="Cancelar" icon="pi pi-times" class="p-button-danger"
+                    (click)="refresh(); goalDialog = false"></button>
+            <button *ngIf="!editing" pButton label="Salvar" icon="pi pi-check" class="p-button-success"
+                    (click)="saveGoal()"
+                    [disabled]="goalForm.invalid"></button>
+        </p-footer>
+    </p-dialog>
+</form>
+
