--- a/src/app/layout/product/product-category/product-category.component.html
+++ b/src/app/layout/product/product-category/product-category.component.html
@@ -9,8 +9,11 @@
         <ng-template pTemplate="caption">
             <div class="p-mt-4 flex justify-content-between gap-2">
                 <div class="p-2 flex gap-2">
-                    <button pButton icon="pi pi-print" class="p-button-help p-mr-2"
-                            (click)="true"></button>
+                    <p-button
+                        severity="help"
+                        icon="pi pi-external-link"
+                        label="Exportar"
+                        (onClick)="exportCSV()"/>
                 </div>
                 <div class="text-4xl">Categorias de Produto</div>
                 <div class="p-2 flex gap-2">
@@ -21,28 +24,48 @@
         </ng-template>
         <ng-template pTemplate="header">
             <tr>
-                <th class="w-2rem"></th>
-                <th class="font-semibold">Nome</th>
-                <th class="font-semibold text-center">Alterado Por</th>
-                <th class="font-semibold">Data Atualização</th>
+                <th pSortableColumn="name" class="font-semibold">
+                    Nome
+                    <p-sortIcon field="name"/>
+                </th>
+                <th pSortableColumn="lastModifiedBy" class="font-semibold text-center">
+                    Alterado Por
+                    <p-sortIcon field="lastModifiedBy"/>
+                </th>
+                <th pSortableColumn="lastModifiedDate" class="font-semibold">
+                    Data Atualização
+                    <p-sortIcon field="lastModifiedDate"/>
+                </th>
+                <th></th>
+            </tr>
+            <tr>
+                <th>
+                    <p-columnFilter field="name" type="text" placeholder="Nome"/>
+                </th>
+                <th>
+                    <p-columnFilter field="lastModifiedBy" type="text" placeholder="Alterado Por"/>
+                </th>
+                <th>
+                    <p-columnFilter field="lastModifiedDate" type="date" placeholder="Data Atualização"/>
+                </th>
+                <th></th>
             </tr>
         </ng-template>
         <ng-template pTemplate="body" let-productCategory>
             <tr>
+                <td>{{ productCategory.name }}</td>
+                <td class="text-center">
+                    <p-tag severity="warning" value="{{ productCategory.lastModifiedBy }}"/>
+                </td>
+                <td>{{ productCategory.lastModifiedDate | date:"dd/MM/yyyy - HH:mm:ss" }}</td>
                 <td class="w-2rem">
-                    <div class="flex gap-2">
+                    <div class="flex gap-2 justify-content-end">
                         <button class="p p-button-info p-button-raised" pButton icon="pi pi-pencil"
                                 (click)="editProductCategory(productCategory)"></button>
                         <button class="p p-button-danger p-button-raised" pButton icon="pi pi-trash"
                                 (click)="confirmDeleteProductCategory(productCategory)"></button>
                     </div>
                 </td>
-                <td>{{ productCategory.name }}</td>
-                <td class="text-center"><p-tag
-                    severity="warning"
-                    value="{{ productCategory.lastModifiedBy }}"/>
-                </td>
-                <td>{{ productCategory.lastModifiedDate | date:"dd/MM/yyyy - HH:mm:ss" }}</td>
             </tr>
         </ng-template>
     </p-table>
